fixed overlaping footer on about.html

--- a/css/main.less
+++ b/css/main.less
@@ -47,7 +47,7 @@
             }
         }
     }
-    
+
     section {
         padding: 15px;
         max-width: 500px;
@@ -62,7 +62,7 @@
             font-size: 16px;
         }
     }
-    
+
     .text-box {
         position: fixed;
         width: 300px;
@@ -84,12 +84,14 @@
             }
         }
     }
-    
+
     footer {
         padding: 25px 0;
         background-color: @blk;
         color: @white;
         text-align: center;
+        position: relative;
+        bottom: -30px;
         p {
             margin: 0;
             font-size: 12px;
@@ -105,7 +107,7 @@
             }
         }
     }
-    
+
     @keyframes font-change {
         from {
             top: 0px;
@@ -114,7 +116,7 @@
             top: 200px;
         }
     }
-    
+
     @-webkit-keyframes font-change {
         from {
             top: 0px;
@@ -123,7 +125,7 @@
             top: 200px;
         }
     }
-    
+
     .navbar-header {
         .navbar-brand {
             font-weight: 800;
@@ -134,7 +136,7 @@
             }
         }
     }
-    
+
     .navbar-nav>li>a {
         border-radius: 15px;
         font-weight: bold;
@@ -144,12 +146,12 @@
             transition: font-size 2s ease;
         }
     }
-    
+
     button.navbar-toggle {
         color: @coral;
         font-size: 20px;
     }
-    
+
     header {
         margin-top: 60px;
         padding-top: 60px;
@@ -179,7 +181,7 @@
             }
         }
     }
-    
+
     //* MEDIA QUERIES *//
     @media (min-width: 768px) {
         header {
@@ -201,7 +203,7 @@
             }
         }
     }
-    
+
     @media (min-width: 992px) {
         header .header-content .header-content-inner {
             position: absolute;
